# rktop

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
config/: rktop.example.toml  server-tui-monitor.example.toml
docs/: branching.md  verification.md
scripts/: build-deb.sh  install.ps1  install.sh
src/: app.rs  config.rs  fixtures.rs  main.rs  model.rs  theme.rs
src/collectors/: local.rs  mod.rs  proxmox.rs  ssh.rs  truenas.rs
src/render/: mod.rs
tests/: verification_contracts.rs
